--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {
 			</div>
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
-
+		<script src="coi-serviceworker.js"></script>
 		<script src="index.js"></script>
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":2854016,"index.wasm":35708238},"focusCanvas":true,"gdextensionLibs":[]};
